<resources>
    <string name="app_name">LOTR: RisetoWar</string>
    <string name="backward_description">Back</string>
    <string name="cancel">取消</string>
    <string name="close_description">Close</string>
    <string name="confirm">确认</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="export_ef_alert_cancel">取消</string>
    <string name="export_ef_alert_confirm">退出</string>
    <string name="export_ef_alert_message">你想要结束游戏并退出吗？</string>
    <string name="export_ef_alert_title">退出游戏</string>
    <string name="forward_description">Forward</string>
    <string name="hello_world">Hello world!</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="neox_abort">Stop</string>
    <string name="neox_available">Available</string>
    <string name="neox_back">Back</string>
    <string name="neox_cancel">Cancel</string>
    <string name="neox_confirm">OK</string>
    <string name="neox_dumpview_cancel">Cancel</string>
    <string name="neox_dumpview_confirm">OK</string>
    <string name="neox_dumpview_label">Our apologies! The program has crashed unexpectedly. Send error report?</string>
    <string name="neox_hello">Hello World, UnitestActivity!</string>
    <string name="neox_ignore">Ignore</string>
    <string name="neox_launcher_adjust_res">Adjust resolution</string>
    <string name="neox_launcher_asset_size_to_copy">Size of assets to be copied</string>
    <string name="neox_launcher_auto_res">Adaptive resolution</string>
    <string name="neox_launcher_check_update">Checking for updates...</string>
    <string name="neox_launcher_continue">Continue to update</string>
    <string name="neox_launcher_copy_data">Install data pack</string>
    <string name="neox_launcher_copying">Initializing; unpacking Middle-earth...</string>
    <string name="neox_launcher_data_dir">Data pack location</string>
    <string name="neox_launcher_data_sd">Data Directory</string>
    <string name="neox_launcher_device_test">Performance test</string>
    <string name="neox_launcher_external_sd">External storage</string>
    <string name="neox_launcher_failure">Update failed</string>
    <string name="neox_launcher_failure_checkupdate">Update check failed. Please restart the game.</string>
    <string name="neox_launcher_failure_engine">Game version is outdated. Please download the latest version</string>
    <string name="neox_launcher_internal_sd">Internal storage</string>
    <string name="neox_launcher_multithread_gpures">Multithreading GLES</string>
    <string name="neox_launcher_multithread_render">Multithreading rendering</string>
    <string name="neox_launcher_no_enough_space">Insufficient space. Please free up additional space in your internal storage or make sure an SD card has been inserted.</string>
    <string name="neox_launcher_not_wifi">You are not connected to Wi-Fi. Update anyway?</string>
    <string name="neox_launcher_start_game">Start game</string>
    <string name="neox_launcher_stop">Pause update</string>
    <string name="neox_launcher_updating">Updating</string>
    <string name="neox_launcher_warn">Warning</string>
    <string name="neox_no">No</string>
    <string name="neox_permission_ok">确定</string>
    <string name="neox_permission_record_audio">我们需要使用您的语音权限以便您能体验游戏内的语音交流功能</string>
    <string name="neox_permission_storage">我们需要使用您的存储空间权限以便游戏可以正常解压安装并进入</string>
    <string name="neox_permission_title">请求权限</string>
    <string name="neox_pick_from_camera">Camera</string>
    <string name="neox_pick_from_library">Album</string>
    <string name="neox_pick_image">Select image</string>
    <string name="neox_retry">Retry</string>
    <string name="neox_root">/sdcard/netease/lotr</string>
    <string name="neox_unavailable">Unavailable</string>
    <string name="neox_version_name">1.0.438227</string>
    <string name="neox_welcomeview_rsync_all">Rsync syncs all files</string>
    <string name="neox_welcomeview_rsync_script">Rsync only syncs script files</string>
    <string name="neox_welcomeview_start_engine">Start game engine</string>
    <string name="neox_welcomeview_total_update_file_num">Total number of update files</string>
    <string name="neox_welcomeview_updated_file_num">Number of updated files</string>
    <string name="neox_yes">Yes</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="nxcrashhunter_appkey">02b241637db4ca789a335928b0709f6e</string>
    <string name="nxcrashhunter_engine_version" />
    <string name="nxcrashhunter_project">g96naxx2gb</string>
    <string name="nxcrashhunter_so" />
    <string name="nxcrashhunter_upload_url">https://appdump.nie.easebar.com/upload</string>
    <string name="nxngpush_oppo_channel_id">oppo_channel_id</string>
    <string name="nxngpush_oppo_channel_name">oppo_channel_name</string>
    <string name="nxngpush_oppo_group_id">oppo_group_id</string>
    <string name="nxngpush_oppo_group_name">oppo_group_name</string>
    <string name="nxunisdk_engine">NeoX</string>
    <string name="nxunisdk_jf_gameid" />
    <string name="nxunisdk_jf_log_key" />
    <string name="nxunisdk_message_exit_game">确定要退出游戏?</string>
    <string name="nxunisdk_title_exit_game">退出游戏</string>
    <string name="refresh_description">Refresh</string>
    <string name="state_completed">Download finished</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_failed">Download failed</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_unknown">Starting...</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="txt_tips">Return to game</string>
    <string name="uni_gm_f_close">关闭</string>
    <string name="uni_gm_f_close_cancel">取消</string>
    <string name="uni_gm_f_close_confirm1">确认关闭消息悬浮球?</string>
    <string name="uni_gm_f_close_confirm2">(有新消息时重新显示)</string>
    <string name="uni_gm_f_close_sure">确定</string>
    <string name="uni_gm_f_msg">消息</string>
    <string name="uni_gm_f_private">专属</string>
    <string name="uni_gm_img_pick_dlg_title">上传方式选择</string>
    <string name="unisdk_alert_dialog_info">未成年人消费限制说明</string>
    <string name="unisdk_alert_dialog_positive">我知道了</string>
    <string name="unisdk_alert_dialog_tips">提示</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="netease_mpay_oversea__aas_title">Tips</string>
    <string name="netease_mpay_oversea__alert_hint">Please enter \"Confirm\"</string>
    <string name="netease_mpay_oversea__alert_logout">Are you sure you want to log out of your current account?</string>
    <string name="netease_mpay_oversea__amazon">Amazon</string>
    <string name="netease_mpay_oversea__apple">Sign in with Apple</string>
    <string name="netease_mpay_oversea__bind_account">Bind Account</string>
    <string name="netease_mpay_oversea__bind_error_cancel">Cancel Binding</string>
    <string name="netease_mpay_oversea__bind_error_repeatbinding">This account has already been bound.</string>
    <string name="netease_mpay_oversea__bind_error_required_login">Unable to bind. You are currently not logged in to an account.</string>
    <string name="netease_mpay_oversea__bound">Bound</string>
    <string name="netease_mpay_oversea__change_email">Change</string>
    <string name="netease_mpay_oversea__close_paren">)</string>
    <string name="netease_mpay_oversea__confirm_cancel">Cancel</string>
    <string name="netease_mpay_oversea__confirm_continue">Continue</string>
    <string name="netease_mpay_oversea__confirm_retry">Try again</string>
    <string name="netease_mpay_oversea__confirm_skip">Skip</string>
    <string name="netease_mpay_oversea__confirm_sure">Confirm</string>
    <string name="netease_mpay_oversea__create_new_guest_confirm">Are you sure you want to create new game data?</string>
    <string name="netease_mpay_oversea__create_new_guest_tips">The game data has been bound. You can recover it by switching to the corresponding account.</string>
    <string name="netease_mpay_oversea__day_hint">DD</string>
    <string name="netease_mpay_oversea__discord">Discord</string>
    <string name="netease_mpay_oversea__display_id">ID: %1$s</string>
    <string name="netease_mpay_oversea__dmm">DMM GAMES</string>
    <string name="netease_mpay_oversea__email_account_recover_success">Account recovered and password reset. You will now be re-logged in.</string>
    <string name="netease_mpay_oversea__email_account_recover_success_clear_bind">Account recovered and password reset. All associated third-party platforms have been unbound. You will now be re-logged in.</string>
    <string name="netease_mpay_oversea__email_register_data_not_crossplatorm_hint">iOS/Android game data is not interchangeable, and a single email address can only be registered to one platform.</string>
    <string name="netease_mpay_oversea__epic">Epic</string>
    <string name="netease_mpay_oversea__facebook">Facebook</string>
    <string name="netease_mpay_oversea__force_bind_email_account">Please bind your email to secure your account.</string>
    <string name="netease_mpay_oversea__force_bind_email_account_hint">Register or bind your account to an email account to avoid data loss.</string>
    <string name="netease_mpay_oversea__forgot_password">Forgot password?</string>
    <string name="netease_mpay_oversea__game_center">Game Center</string>
    <string name="netease_mpay_oversea__go_bind">Bind</string>
    <string name="netease_mpay_oversea__go_unbind">Unbind</string>
    <string name="netease_mpay_oversea__go_verify_email">Verify</string>
    <string name="netease_mpay_oversea__google">Google</string>
    <string name="netease_mpay_oversea__google_play_games">Google Play</string>
    <string name="netease_mpay_oversea__guest">Guest</string>
    <string name="netease_mpay_oversea__host_warn">服务器地址非正式地址，测试包请勿外放!!(内部)</string>
    <string name="netease_mpay_oversea__huawei">HuaWei</string>
    <string name="netease_mpay_oversea__hydra_email">Email</string>
</resources>